# ZPac

./: .gitignore  Architettura di progetto (ITA).md  CMakeLists.txt  CREDITS.md  LICENSE  README.md  bresenham_accumulator_zpac.md  generate_big_pacman.py  generate_big_pacman_v2.py  generate_naked_ghost.py
Docs/: README.md
assets/: genera_ghost_intro_tiles.py  genera_intro_dot_pill.py
data/: README.md
docs/: CREDITS.md  README.md
src/: CMakeCache.txt  Makefile  cmake_install.cmake  cutscene.c  cutscene.h  dots.c  dots.h  fruit.c  fruit.h  game_loop.c  game_loop.h  ghost.c  ghost.h  input.c  input.h  level256.c  level256.h  main.c  maze_logic.c  maze_logic.h  sound.c  sound.h  zpac.ihx  zpac_maze_data.h  zpac_types.h
tools/: gen_score_tiles.py
